[package]
name = "multiflow"
version = "0.2.0"
edition = "2021"
authors = ["Marcin Czerwonka <marcin.czerwonka@protonmail.com>"]
license = "MIT"
default-run = "netflow-collect"

[lib]
name = "multiflow"
path = "src/lib.rs"
test = false
doctest = false
doc = true
bench = false

[[bin]]
name = "netflow-collect"

[[bin]]
name = "sflow-collect"

[[example]]
name = "parse_sflow_ready"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[dependencies]
nom = "7.1"
lazy_static = "1.4"

# TODO: Features for sflow, netflow + versions