[package]
name = "multiflow"
version = "0.4.0"
edition = "2021"
authors = ["Marcin Czerwonka <marcin.czerwonka@protonmail.com>"]
license = "MIT"
default-run = "netflow-collect"

[lib]
name = "multiflow"
path = "src/lib.rs"
test = false
doctest = false
doc = true
bench = false

[[bin]]
required-features = ["netflow"]
name = "netflow-collect"

[[bin]]
required-features = ["sflow"]
name = "sflow-collect"

[[example]]
required-features = ["sflow"]
name = "parse_sflow_ready"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[dependencies]
nom = "7.1"
lazy_static = { version = "1.4", optional = true }

[features]
default = ["sflow", "netflow"]
netflow = ["lazy_static"]
sflow = []